# Aurora

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
src/common/: CMakeLists.txt
src/common/include/aurora/: any_ptr.hpp  array_view.hpp  integer.hpp  log.hpp  result.hpp  updatable.hpp  utility.hpp
src/gal/: CMakeLists.txt
src/gal/include/aurora/gal/: bind_group.hpp  buffer.hpp  command_buffer.hpp  command_pool.hpp  enums.hpp  fence.hpp  pipeline_builder.hpp  pipeline_layout.hpp  queue.hpp  render_device.hpp  render_pass.hpp  render_target.hpp  sampler.hpp  shader_module.hpp  texture.hpp
src/gal/include/aurora/gal/backend/: vulkan.hpp
src/gal/src/vulkan/: bind_group.hpp  buffer.hpp  command_buffer.hpp  command_pool.hpp  common.hpp  fence.hpp  pipeline_builder.hpp  pipeline_layout.hpp  queue.hpp  render_device.cpp  render_pass.hpp  render_pass_builder.hpp  render_target.hpp  sampler.hpp  shader_module.hpp  texture.hpp  texture_view.hpp
src/game/: CMakeLists.txt
src/game-vk/: CMakeLists.txt
src/game-vk/src/: main.cpp  output.frag.glsl  output.frag.h  output.vert.h  renderer.cpp  renderer.hpp  triangle.frag.glsl  triangle.frag.h  triangle.vert.glsl  triangle.vert.h
src/game-vk/src/shader/: output.frag.glsl  output.frag.h  output.vert.glsl  surface.frag.glsl  surface.frag.h  surface.vert.glsl  surface.vert.h  triangle.frag.h  triangle.vert.h
src/game/src/: geometry_cache.hpp  gltf_loader.cpp  gltf_loader.hpp  main.cpp  material.hpp  renderer.cpp  renderer.hpp  texture.hpp
src/game/src/shader/: build.sh  output.vert.glsl  output.vert.h
src/math/: CMakeLists.txt
src/math/include/aurora/math/: box3.hpp  frustum.hpp  matrix4.hpp  plane.hpp  quaternion.hpp  rotation.hpp  rotator.hpp  traits.hpp  vector.hpp
src/renderer/: CMakeLists.txt
src/renderer/include/aurora/renderer/: gpu_resource.hpp  material.hpp  render_engine.hpp  render_pipeline_base.hpp  renderer.hpp  texture.hpp  uniform_block.hpp  uniform_block_layout.hpp
src/renderer/include/aurora/renderer/component/: camera.hpp  mesh.hpp  scene.hpp
src/renderer/include/aurora/renderer/geometry/: geometry.hpp  index_buffer.hpp  vertex_buffer.hpp
src/renderer/src/: forward_render_pipeline.cpp  forward_render_pipeline.hpp  pbr.glsl.hpp  render_engine.cpp  render_pipeline_base.hpp  renderer.cpp  texture.cpp
src/renderer/src/cache/: geometry_cache.cpp  geometry_cache.hpp  texture_cache.cpp  texture_cache.hpp
src/renderer/src/effect/ssr/: ssr_effect.cpp  ssr_effect.hpp
src/renderer/src/effect/ssr/shader/: raytrace.glsl.hpp  raytrace.hpp  test.glsl.hpp
src/renderer/src/forward/: forward_render_pipeline.cpp  forward_render_pipeline.hpp
src/scene/: CMakeLists.txt
src/scene/include/aurora/scene/: component.hpp  game_object.hpp  rotation.hpp
src/scene/include/aurora/scene/component/: transform.hpp
src/scene/include/aurora/scene/geometry/: geometry.hpp  index_buffer.hpp  vertex_buffer.hpp
src/scene/src/component/: transform.cpp
